# template-rs

./: .editorconfig  .env.example  .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  SECURITY.md  cargo-generate.toml  flake.nix
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tracking.md
.github/workflows/: cargo-bench.yml  cargo-build.yml  cargo-clippy.yml  cargo-publish.yml  cargo-test.yml  clean.yml  cleanup.yml  clippy.yml  crates-io.yml  crates.yml  docker.yml  fly-io.yml  gitflow.yml  nix.yml  release.yml  rust.yml
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/traits/: field.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/{{ project-name }}/: Cargo.toml
crates/{{ project-name }}/benches/: default.rs
scripts/: cargo.sh  nix.sh
{{ project-name }}/: Cargo.toml
{{ project-name }}/benches/: default.rs
{{ project-name }}/src/: error.rs  lib.rs
{{crate_name}}/: Cargo.toml
{{crate_name}}/benches/: default.rs
{{crate_name}}/src/: lib.rs
{{crate_name}}/tests/: default.rs
