[workspace]
default-members = [
    "{{ project-name }}"
]

exclude = [ ]

members = [
    "{{ project-name }}",
]

resolver = "3"

[workspace.package]
authors = ["{{ authors }}",]
categories = [ ]
description = "{{ description }}"
edition = "{{ edition }}"
homepage = "https://{{ provider }}/{{ alias }}/{{ project-name }}/wiki"
keywords = [ ]
license = "{{ license }}"
readme = "README.md"
repository = "https://{{ provider }}/{{ alias }}/{{ project-name }}.git"
rust-version = "1.85.0"
version = "0.0.0"

[workspace.dependencies]
# benchmarking
criterion = { version = "0.6" }
# error handling
anyhow = { default-features = false, version = "1" }
thiserror = { default-features = false, version = "2" }
# logging
tracing = { default-features = false, features = ["attributes"], version = "0.1" }
# macros
smart-default = { version = "0.7" }
lazy_static = { version = "1" }
paste = { version = "1" }
# serialization
serde = { default-features = false, features = ["derive"], version = "1" }
serde_derive = { version = "1" }
serde_json = { default-features = false, version = "1" }

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = 'thin'
panic = 'abort'
rpath = true
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = true
panic = 'abort'
rpath = false
opt-level = "z"
overflow-checks = false
