[workspace]
default-members = [
  "{{ project-name }}",
]
members = [
  "{{ project-name }}",
  "core",
]

resolver = "3"

[workspace.package]
authors = ["{{ authors }}"]
categories = []
description = "{{ description }}"
edition = "{{ edition }}"
homepage = "https://{{ provider }}/{{ alias }}/{{ project-name }}/wiki"
keywords = []
license = "{{ license }}"
readme = "README.md"
repository = "https://{{ provider }}/{{ alias }}/{{ project-name }}.git"
rust-version = "1.86.0"
version = "0.0.0"

[workspace.dependencies]
# local
{{ project-name }} = { default-features = false, path = "{{ project-name }}", version = "0.0.0" }
{{ project-name }}-core = { default-features = false, path = "core", version = "0.0.0" }
# benchmarks
criterion = { features = ["plotters"], version = "0.8" }
# error handling
anyhow = { default-features = false, version = "1" }
thiserror = { default-features = false, version = "2" }
# rand
getrandom = { default-features = false, version = "0.4" }
rand = { default-features = false, version = "0.10" }
rand_distr = { default-features = false, version = "0.6" }
uuid = { default-features = false, version = "1" }
# time
chrono = { default-features = false, version = "0.4" }
time = { default-features = false, version = "0.3" }
# macros
lazy_static = { version = "1" }
paste = { version = "1" }
smart-default = { version = "0.7" }
# serialization
serde = { default-features = false, features = ["derive"], version = "1" }
serde_derive = { version = "1" }
serde_json = { default-features = false, version = "1" }
# WebAssembly
wasm-bindgen = { default-features = false, version = "0.2" }
# WebAssembly System Interface
wit-bindgen = { default-features = false, version = "0.59" }
# tracing
tracing = { default-features = false, features = ["attributes"], version = "0.1" }

[workspace.dependencies.tracing-subscriber]
default-features = false
features = [
  "env-filter",
  "fmt",
]
version = "0.3"

# ************* [Profiles] *************
[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = 'thin'
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = "z"
overflow-checks = false
panic = 'abort'
rpath = false
