[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "{{ project-name }}"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std",
]

full = [
    "default",
    "serde",
]

# ********* [FF] Dependencies *********
alloc = [
    "serde?/alloc",
]

serde = [
    "dep:serde"
]

# ********* [FF] Environments *********
std = [
    "alloc",
    "serde?/std",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[[test]]
name = "default"
required-features = []

[build-dependencies]

[dependencies]
serde.workspace = { optional = true, workspace = true }
thiserror.workspace = { workspace = true }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown.dependencies]

[target.wasm32-wasi]
