[package]
build = "build.rs"
name = "{{ project-name }}"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[dependencies]
# error handling
anyhow = { optional = true, workspace = true }
thiserror = { workspace = true }
# serialization
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }

[dev-dependencies]
lazy_static = { workspace = true}

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]

[features]
default = [
    "std",
]

full = [
    "default",
    "json",
    "serde",
]

# ************* [FF:Environments] *************
std = [
    "alloc",
    "anyhow?/std",
    "serde?/std",
    "serde_json?/std",
    "strum?/std",
    "thiserror/std",
]

wasm = [

]

# ************* [FF:Dependencies] *************
alloc = [
    "serde?/alloc",
    "serde_json?/alloc",
    "strum/alloc",
]

anyhow = ["dep:anyhow"]

json = [
    "alloc",
    "serde",
    "serde_json",
]

serde = [
    "dep:serde"
]

serde_json = ["dep:serde_json"]

# ************* [Unit Tests] *************
[[test]]
name = "default"
required-features = []