[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "${{crate_name}}"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
full = []

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[condi]
[[bin]]
bench = false
name = "${{app_name}}"
path = "src/bin/main.rs"
test = false

[build-dependencies]

[dependencies]

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]