[package]
build = "build.rs"
description = "The core modules for the {{ project-name }} project."
name = "{{ project-name }}-core"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib",]
bench = false
doc = true
doctest = false
test = true

[[test]]
name = "default"
required-features = []

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = [ "--cfg", "docsrs" ]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "v{{version}}"

[dependencies]
# error-handling
thiserror = { workspace = true }
# serialization
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# macros & utilities
paste = { workspace = true }
smart-default = { workspace = true }
strum = { optional = true, workspace = true }
# WebAssembly
wasm-bindgen = { optional = true, workspace = true }

[features]
default = [
    "std",
]

full = [
    "default",
    "json",
    "serde",
]

# ************* [FF:Features] *************
json = [
    "alloc",
    "serde",
    "serde_json",
]

nightly = []

# ************* [FF:Environments] *************
std = [
    "alloc",
    "anyhow?/std",
    "serde?/std",
    "serde_json?/std",
    "strum?/std",
    "thiserror/std",
]

wasi = [
    "alloc",
]

wasm = [
    "alloc",
    "wasm_bindgen",
]

# ************* [FF:Dependencies] *************
alloc = [
    "serde?/alloc",
    "serde_json?/alloc",
]

serde = [
    "dep:serde",
    "dep:serde_derive",
]

serde_json = ["dep:serde_json"]

wasm_bindgen = ["dep:wasm-bindgen"]