[package]
build = "build.rs"
name = "{{ project-name }}"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = [
  "cdylib", 
  "rlib",
]
bench = true
doc = true
doctest = false
test = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = [ "--cfg", "docsrs" ]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "v{{version}}"

[dependencies]
{{ project-name }}-core = { default-features = false, workspace = true }

[dev-dependencies]
criterion = { features = ["plotters"], version = "0.7" }
lazy_static = { workspace = true}

# ************* [Benchmarks] *************
[[bench]]
harness = false
name = "default"
required-features = ["std"]

# ************* [Unit Tests] *************
[[test]]
name = "default"

[features]
default = [
    "std",
]

full = [
    "default",
    "json",
    "serde",
]

nightly = [
    "{{ project-name }}-core/nightly",
]

# ************* [FF:Environments] *************
std = [
    "alloc",
    "{{ project-name }}-core/std",
]

wasi = [    
    "{{ project-name }}-core/wasi",
]

wasm = [
    "alloc",
    "wasm_bindgen",
    "{{ project-name }}-core/wasm",
]

# ************* [FF:Dependencies] *************
alloc = [
    "{{ project-name }}-core/alloc",
]

anyhow = [
    "{{ project-name }}-core/anyhow",
]

json = [
    "{{ project-name }}-core/json",
]

serde = [
    "{{ project-name }}-core/serde",
]

serde_json = [
    "{{ project-name }}-core/serde_json",
]

wasm_bindgen = [
    "{{ project-name }}-core/wasm_bindgen",
]
